<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_icon"
            android:title="@string/help_or_feedback" />

        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_mail_black_24dp"
            android:title="@string/email" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_author" />
    </group>

</menu>
